--- a/views/room.ejs
+++ b/views/room.ejs
@@ -18,6 +18,8 @@
    <link rel="stylesheet" href="css/style.css">
    <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
    <script src="js/script.js" defer></script>
+
+   <!-- Make a grid of 300x300 videos  -->
    <style>
       #video-grid{
          display: flex;
@@ -36,6 +38,7 @@
    <div class="main">
       <div class="main__left">
          <div class="main__videos">
+             <!-- Make our video grid -->
             <div id="video-grid">
       
             </div>
