--- a/views/room.ejs
+++ b/views/room.ejs
@@ -36,6 +36,14 @@
 </head>
 <body>
    <div class="main">
+      <nav class="navbar navbar-dark bg-primary">
+         <div class="container-fluid">
+           <a class="navbar-brand" href="#">
+             <img src="image/headphones.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+             VideoChatRoom!
+           </a>
+         </div>
+       </nav>
       <div class="main__left">
          <div class="main__videos">
              <!-- Make our video grid -->
