Navbar css changing

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -36,7 +36,7 @@
 </head>
 <body>
    <div class="main">
-      <nav class="navbar navbar-dark bg-primary">
+      <nav class="navbar" id="navbar">
          <div class="container-fluid">
            <a class="navbar-brand" href="#">
              <img src="image/headphones.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
