--- a/views/room.ejs
+++ b/views/room.ejs
@@ -39,7 +39,7 @@
       <nav class="navbar" id="navbar">
          <div class="container-fluid">
            <a class="navbar-brand" href="#">
-             <img src="image/headphones.png" alt="" width="30" height="24">
+             <img src="image/headphones.png" alt="">
              VideoChatRoom!
            </a>
          </div>
