--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,7 +107,7 @@
     list-style-type:none;
 	margin:0;
 	padding:0;
-    display: inline-block;
+    display: inline;
     width: 30px;
     height: 24px;
 }
