--- a/views/room.ejs
+++ b/views/room.ejs
@@ -36,15 +36,15 @@
 </head>
 <body>
    <div class="main">
-      <nav class="navbar" id="navbar">
-         <div class="container-fluid">
-           <a class="navbar-brand" href="#">
-             <img src="image/headphones.png" alt="">
-             VideoChatRoom!
-           </a>
-         </div>
-       </nav>
       <div class="main__left">
+         <nav class="navbar" id="navbar">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#" id="navbar-brand">
+                <img src="image/headphones.png" id="logo" width="50" height="50">
+                VideoChatRoom!
+              </a>
+            </div>
+          </nav>
          <div class="main__videos">
              <!-- Make our video grid -->
             <div id="video-grid">
